# ore-code

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/smoke/: ore-code.spec.ts  seekforge.spec.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: artifacts.rs  automation_commands.rs  automation_daemon.rs  bootstrap.rs  command_utils.rs  config_status.rs  file_commands.rs  git_commands.rs  lib.rs  main.rs  mcp.rs  note_commands.rs  process_commands.rs  provider_http.rs  sandbox_commands.rs  session_commands.rs  shell_commands.rs  shell_job_commands.rs  side_git.rs  skill_commands.rs  snapshots.rs  tests.rs  web_fetch.rs  workspace_commands.rs
apps/desktop/src/app/: AppSettingsOverlay.tsx  AppSidebar.tsx  AppTopbar.tsx  appShellUtils.test.ts  appShellUtils.ts  appTypes.ts  useAppSettingsController.ts  useProjectIndexController.ts  useResizablePanels.test.ts  useResizablePanels.ts  useSessionActions.ts  useSkillController.ts  (+2 more)
docs/: 06-skill-system.md  API_AND_COMPATIBILITY.md  ARCHITECTURE_OVERVIEW.md  DEEPSEEK_V4_CONTEXT.md  DEVELOPMENT.md  FAQ.md  KNOWN_LIMITATIONS.md  LOCAL_DATA_AND_CONFIG.md  README.md  ROADMAP.md  TROUBLESHOOTING.md
scripts/: build-windows.ps1  smoke-shell-jobs.sh
(+149 files in other folders)
